force-app/main/default/objects/ActionItem__c/ActionItem__c.object-meta.xml
<CustomObject>
    <label>Action Item</label>
    <nameField>
        <displayFormat>AI-{000000}</displayFormat>
        <label>Action Item #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>