force-app/main/default/objects/ActionItem__c/fields/ActionItem__c.field-meta.xml
<CustomField>
    <fullName>ActionItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Action Item</label>
    <referenceTo>ActionItem__c</referenceTo>
    <relationshipLabel>Action Items</relationshipLabel>
    <relationshipName>ActionItems</relationshipName>
    <type>Lookup</type>
</CustomField>