force-app/main/default/objects/ActionItem__c/fields/Effort_Estimation_In_Hours__c.field-meta.xml
<CustomField>
    <fullName>Effort_Estimation_In_Hours__c</fullName>
    <label>Effort Estimation ( Hours )</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>