force-app/main/default/objects/ActionItem__c/fields/Efforts_In_Days__c.field-meta.xml
<CustomField>
    <fullName>Efforts_In_Days__c</fullName>
    <formula>IF(NOT(ISNULL(Effort_Estimation_In_Hours__c)), IF(TEXT(Effort_Estimation_In_Hours__c)&lt;&gt;&apos;0&apos;, Effort_Estimation_In_Hours__c/8,0) ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Efforts ( Days )</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>