force-app/main/default/objects/ActionItem__c/fields/Issue_Title__c.field-meta.xml
<CustomField>
    <fullName>Issue_Title__c</fullName>
    <label>Issue Title</label>
    <type>TextArea</type>
</CustomField>