force-app/main/default/objects/ActionItem__c/fields/Reported_By__c.field-meta.xml
<CustomField>
    <fullName>Reported_By__c</fullName>
    <label>Reported By</label>
    <type>TextArea</type>
</CustomField>