force-app/main/default/objects/ActionItem__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Requirement Confirmed By Client</fullName>
            </value>
            <value>
                <fullName>Analyzed and Estimated</fullName>
            </value>
            <value>
                <fullName>On Going Task</fullName>
            </value>
            <value>
                <fullName>Unit Test Development</fullName>
            </value>
            <value>
                <fullName>Ready for Review for Client</fullName>
            </value>
            <value>
                <fullName>Move to Production</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Under Maintainance</fullName>
            </value>
            <value>
                <fullName>ReOpen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>