force-app/main/default/objects/ActionItem__c/fields/Total_Working_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Working_Hours__c</fullName>
    <label>Total Working Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>