force-app/main/default/objects/ActionItem__c/validationRules/End_Date_not_greater_Due_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_not_greater_Due_Date</fullName>
    <active>false</active>
    <errorConditionFormula>End_Date__c   &gt;  Due_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date should not grater than Due Date</errorMessage>
</ValidationRule>