force-app/main/default/objects/ActionItem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Issue_Title__c</columns>
    <columns>Ticket_User__c</columns>
    <columns>Reported_By__c</columns>
    <columns>Total_Working_Hours__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>