force-app/main/default/objects/ActionItem__c/listViews/All_Open_ActionItems.listView-meta.xml
<ListView>
    <fullName>All_Open_ActionItems</fullName>
    <columns>NAME</columns>
    <columns>Issue_Title__c</columns>
    <columns>Description__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Move to Production,Completed</value>
    </filters>
    <label>All Open ActionItems</label>
</ListView>