force-app/main/default/objects/ActionItem__c/listViews/Completed_Action_items.listView-meta.xml
<ListView>
    <fullName>Completed_Action_items</fullName>
    <columns>NAME</columns>
    <columns>Issue_Title__c</columns>
    <columns>Project__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Effort_Estimation_In_Hours__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Ticket_User__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>Completed Action items</label>
</ListView>