force-app/main/default/objects/ActionItem__c/listViews/Todays_Due_Date.listView-meta.xml
<ListView>
    <fullName>Todays_Due_Date</fullName>
    <columns>NAME</columns>
    <columns>Issue_Title__c</columns>
    <columns>Project__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Effort_Estimation_In_Hours__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Ticket_User__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Due_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Todays Due Date</label>
</ListView>